# GamedevMathProblems

./: CMakeLists  CMakeLists.txt  README.md
My2D/src/: CMakeLists.txt  My2D.cpp  My2D.h
My2D/tests/: CMakeLists.txt  My2DTests.cpp
My3D/src/: CMakeLists.txt  My3D.cpp  My3D.h
My3D/tests/: My3DTests.cpp
cmake/Modules/: FindSDL2.cmake
lib/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
main/DemoDrawer/: Controller.cpp  Controller.h  DemoDrawer.cpp  DemoDrawer.h
main/DemoDrawer/Demos/: DemoInterface.cpp  DemoInterface.h
main/DemoDrawer/Demos/PlainBezierCurveDemo/: Demo.cpp  Demo.h  EventProcessor.cpp  EventProcessor.h  PlainBezierCurveDemo.cpp  PlainBezierCurveDemo.h
